--- a/ProjectManager/View/ProjectManagerView.xaml
+++ b/ProjectManager/View/ProjectManagerView.xaml
@@ -1,4 +1,4 @@
-﻿<RibbonWindow x:Class="ProjectManager.View.ProjectManagerView"
+﻿<Window x:Class="ProjectManager.View.ProjectManagerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,66 +6,138 @@
         xmlns:local="clr-namespace:ProjectManager.View"
         mc:Ignorable="d"
         Title="Project Manager" Height="500" Width="600">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Ribbon x:Name="RibbonWin"  SelectedIndex="0">
-            <!-- Help Pane, located at the right-hand side -->
-            <Ribbon.HelpPaneContent>
-                <RibbonButton/>
-            </Ribbon.HelpPaneContent>
-            <!-- Quick Access Toolbar - located at the upper-left corner -->
-            <Ribbon.QuickAccessToolBar>
-                <RibbonQuickAccessToolBar>
-                    <RibbonButton x:Name ="Save"/>
-                    <RibbonSplitButton x:Name ="Undo">
-                        <RibbonSplitMenuItem Header="Undo 1" />
-                        <RibbonSplitMenuItem Header="Undo 2" />
-                        <RibbonSplitMenuItem Header="Undo 3" />
-                    </RibbonSplitButton>
-                    <RibbonSplitButton x:Name="Redo">
-                        <RibbonSplitMenuItem Header="Redo 1" />
-                        <RibbonSplitMenuItem Header="Redo 2" />
-                    </RibbonSplitButton>
-                </RibbonQuickAccessToolBar>
-            </Ribbon.QuickAccessToolBar>
-            <!-- Application Menu, located at the left-hand side (down arrow) -->
-            <Ribbon.ApplicationMenu>
-                <RibbonApplicationMenu KeyTip="F">
-                    <RibbonApplicationMenuItem Header="Options"/>
-                    <RibbonApplicationMenuItem Header="Exit"/>
-                </RibbonApplicationMenu>
-            </Ribbon.ApplicationMenu>
-            <!-- Ribbon Tab #1: Home -->
-            <RibbonTab Header="Home" KeyTip="H" >
-                <!-- Home  group-->
-                <RibbonGroup x:Name="ClipboardGroup" Header="Home">
-                    <RibbonMenuButton Label="Paste" KeyTip="V">
-                        <RibbonMenuItem Header="Keep Text Only" KeyTip="T"/>
-                        <RibbonMenuItem Header="Paste Special..." KeyTip="S"/>
-                    </RibbonMenuButton>
-                    <RibbonButton Label="Cut" KeyTip="X" />
-                    <RibbonButton Label="Copy" KeyTip="C" />
-                    <RibbonButton Label="Format Painter" KeyTip="FP" />
-                </RibbonGroup>
-                <!-- Employee And Payroll group-->
-                <RibbonGroup x:Name="Employee" Header="Employee And Payroll">
-                    <RibbonMenuButton Label="Employee" KeyTip="V">
-                        <RibbonMenuItem Header="Keep Text Only" KeyTip="T"/>
-                        <RibbonMenuItem Header="Paste Special..." KeyTip="S"/>
-                    </RibbonMenuButton>
-                    <RibbonButton Label="Save" KeyTip="X" />
-                    <RibbonButton Label="Add" KeyTip="C" />
-                </RibbonGroup>
-            </RibbonTab>
-            <!-- Ribbon Tab #2: -->
-            <RibbonTab Header="Insert" KeyTip="I">
-            </RibbonTab>
-            <!-- Ribbon Tab #3: -->
-            <RibbonTab Header="PageLayout" KeyTip="L">
-            </RibbonTab>
-        </Ribbon>
-    </Grid>
-    </RibbonWindow>
+
+    <Border Grid.Row="1" Background="WhiteSmoke" Padding="10" CornerRadius="15" Margin="10" BorderBrush="DarkBlue" BorderThickness="2">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <StackPanel>
+                <GroupBox Padding="5" BorderBrush="DarkGray" Header="Project" Margin="0,0,5,0">
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="92"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="Id:" />
+                        <TextBox Grid.Column="1" Grid.Row="0" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="Name:" />
+                        <TextBox Grid.Column="1" Grid.Row="1" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Text="Date:" />
+                        <TextBox Grid.Column="1" Grid.Row="2" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Text="City:" />
+                        <TextBox Grid.Column="1" Grid.Row="3" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" Text="Street:" />
+                        <TextBox Grid.Column="1" Grid.Row="4" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="5" VerticalAlignment="Center" Text="Post-code:" />
+                        <TextBox Grid.Column="1" Grid.Row="5" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="6" VerticalAlignment="Center" Text="Registration no:" />
+                        <TextBox Grid.Column="1" Grid.Row="6" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+                    </Grid>
+                </GroupBox>
+                <GroupBox Padding="5" BorderBrush="DarkGray" Header="Company" Margin="0,5,5,0" >
+                    <StackPanel Orientation="Horizontal">
+                        <Image Width="180" Height="75" Margin="5"/>
+                        <Button Width="40" Height="40">
+                            <Button.Content>
+                                <StackPanel>
+                                    <TextBlock Text="Select" HorizontalAlignment="Center"/>
+                                    <TextBlock Text="Logo" HorizontalAlignment="Center"/>
+                                </StackPanel>
+                            </Button.Content>
+                        </Button>
+                    </StackPanel>
+                </GroupBox>
+
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <GroupBox  Padding="5" BorderBrush="DarkGray" Header="Investor" Margin="5,0,0,0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="92"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="Id:" />
+                        <TextBox Grid.Column="1" Grid.Row="0" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="Name:" />
+                        <TextBox Grid.Column="1" Grid.Row="1" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Text="City:" />
+                        <TextBox Grid.Column="1" Grid.Row="2" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Text="Street:" />
+                        <TextBox Grid.Column="1" Grid.Row="3" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" Text="Post-code:" />
+                        <TextBox Grid.Column="1" Grid.Row="4" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+                    </Grid>
+                </GroupBox>
+                <GroupBox  Padding="5" BorderBrush="DarkGray" Header="Author" Margin="5,0,0,0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="92"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="Designer:" />
+                        <TextBox Grid.Column="1" Grid.Row="0" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Text="Authorization no:" />
+                        <TextBox Grid.Column="1" Grid.Row="1" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Text="Checking:" />
+                        <TextBox Grid.Column="1" Grid.Row="2" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Text="Authorization no:" />
+                        <TextBox Grid.Column="1" Grid.Row="3" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+
+                        <TextBlock Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" Text="Prepared:" />
+                        <TextBox Grid.Column="1" Grid.Row="4" Height="25" VerticalAlignment="Center"  HorizontalAlignment="Stretch" Margin="5,5,0,0"/>
+                    </Grid>
+                </GroupBox>
+            </StackPanel>
+
+            <TextBlock Text="Additional comments:" Grid.Row="1" Margin="0,5,0,0"/>
+            <RichTextBox HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.ColumnSpan="2" Grid.Row="1" Margin="0,25,0,0"/>
+
+        </Grid>
+    </Border>
+</Window>
