--- a/KPK_CalcSite/Content/Site.css
+++ b/KPK_CalcSite/Content/Site.css
@@ -121,3 +121,24 @@ input[type=submit] {
     border-radius: 5px;
     padding: 20px 20px 20px 20px;
 }
+
+.snow-load-case {
+    text-align: center;
+    margin: 10px auto;
+    display: block;
+}
+
+.snow-load-link {
+    border: 5px dotted;
+    border-color: #5BC0DE;
+    border-radius: 20px 20px;
+}
+
+.snow-load-link:hover {
+    border-color: #FFF200;
+}
+
+#map {
+    width: 75%;
+    height: 75%;
+}
