--- a/KPK_CalcSite/Views/Home/About.cshtml
+++ b/KPK_CalcSite/Views/Home/About.cshtml
@@ -11,7 +11,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h3>@Html.ActionLink("Snow load calculator", "SnowLoadCalculator", "Home")</h3>
+        <h3>@Html.ActionLink("Snow load calculator", "Calculator", "SnowLoads")</h3>
         <p>
             Mostly based on <i>Eurocode 1 - Actions on structures Part 1-3: General actions - Snow loads</i> with Polish national annex.
             This calculator contains all possible design situations and roof types which are described in the document.
@@ -26,7 +26,7 @@
                 <li>snow loads on bridges.</li>
             </ul>
         </p>
-        <h4>@Html.ActionLink("Definitions", "SnowLoadDefinitions", "Home")</h4>
+        <h4>@Html.ActionLink("Definitions", "Definitions", "SnowLoads")</h4>
     </div>
     <div class="col-md-6">
         <h3>@Html.ActionLink("Dead load calculator", "DeadLoadCalculator", "Home")</h3>
