--- a/KPK_CalcSite/Views/Shared/_Layout.cshtml
+++ b/KPK_CalcSite/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="calculatorsDropdownMenu">
                                     <li class="dropdown-header">Loads on structure</li>
                                     <li><a href="@Url.Action("DeadLoadCalculator", "Home")"><span class="glyphicon glyphicon-wrench"></span> Dead loads</a></li>
-                                    <li><a href="@Url.Action("SnowLoadCalculator", "Home")"><span class="glyphicon glyphicon-wrench"></span> Snow loads</a></li>
+                                    <li><a href="@Url.Action("Calculator", "SnowLoads")"><span class="glyphicon glyphicon-wrench"></span> Snow loads</a></li>
                                     <li role="separator" class="divider"></li>
                                 </ul>
                             </div>
