--- a/KPK_CalcSite/Views/SnowLoads/Calculator.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/Calculator.cshtml
@@ -11,19 +11,98 @@
     <div class="col-md-6">
         <div class="snow-load-case">
             <a href="@Url.Action("MonopitchRoof", "SnowLoads")">
-                <img class="snow-load-link" src="~/Content/Images/SnowLoads/Monopitch.png" alt="Monopitch Roof"/>
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/Monopitch.png" alt="Monopitch Roof" />
             </a>
         </div>
-            <img class="snow-load-link" src="~/Content/Images/SnowLoads/PitchedRoof.png" />
-            <img class="snow-load-link" src="~/Content/Images/SnowLoads/MultispanRoof.png" />
+        <div class="snow-load-case">
+            <a href="@Url.Action("PitchedRoof", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/PitchedRoof.png" alt="Pitched Roof" />
+            </a>
+        </div>
+        <div class="snow-load-case">
+            <a href="@Url.Action("MultispanRoof", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/MultispanRoof.png" alt="Multispan Roof" />
+            </a>
+        </div>
+
+        <div class="snow-load-case">
+            <a href="@Url.Action("SnowOverhanging", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/SnowOverhanging.png" alt="Snow Overhanging" />
+            </a>
+        </div>
     </div>
     <div class="col-md-6">
-        <img class="snow-load-link" src="~/Content/Images/SnowLoads/CylindricalRoof.png" />
-        <img class="snow-load-link" src="~/Content/Images/SnowLoads/CylindricalRoof.png" />
-        <img class="snow-load-link" src="~/Content/Images/SnowLoads/CylindricalRoof.png" />
+        <div class="snow-load-case">
+            <a href="@Url.Action("CylindricalRoof", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/CylindricalRoof.png" alt="Cylindrical Roof" />
+            </a>
+        </div>
+        <div class="snow-load-case">
+            <a href="@Url.Action("RoofAbuttingToTallerConstruction", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/RoofAbuttingToTallerConstruction_1.png" alt="Roof Abutting To Taller Construction" />
+            </a>
+        </div>
+        <div class="snow-load-case">
+            <a href="@Url.Action("DriftingAtProjectionsObstructions", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/DriftingAtProjectionsObstructions.png" alt="Drifting At Projections Obstructions" />
+            </a>
+        </div>
+        <div class="snow-load-case">
+            <a href="@Url.Action("Snowguards", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/Snowguards.png" alt="Snowguards" />
+            </a>
+        </div>
     </div>
 </div>
 
+<h3>Exceptional snow drifts</h3>
+<h3>Select proper roof type</h3>
+<div class="row">
+    <div class="col-md-6">
+        <div class="snow-load-case">
+            <a href="@Url.Action("ExceptionalMultispanRoof", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/ExceptionalMultispanRoof.png" alt="Exceptional Multispan Roof" />
+            </a>
+        </div>
+        <div class="snow-load-case">
+            <a href="@Url.Action("PitchedRoof", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/PitchedRoof.png" alt="Pitched Roof" />
+            </a>
+        </div>
+        <div class="snow-load-case">
+            <a href="@Url.Action("MultispanRoof", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/MultispanRoof.png" alt="Multispan Roof" />
+            </a>
+        </div>
 
+        <div class="snow-load-case">
+            <a href="@Url.Action("SnowOverhanging", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/SnowOverhanging.png" alt="Snow Overhanging" />
+            </a>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="snow-load-case">
+            <a href="@Url.Action("CylindricalRoof", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/CylindricalRoof.png" alt="Cylindrical Roof" />
+            </a>
+        </div>
+        <div class="snow-load-case">
+            <a href="@Url.Action("RoofAbuttingToTallerConstruction", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/RoofAbuttingToTallerConstruction_1.png" alt="Roof Abutting To Taller Construction" />
+            </a>
+        </div>
+        <div class="snow-load-case">
+            <a href="@Url.Action("DriftingAtProjectionsObstructions", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/DriftingAtProjectionsObstructions.png" alt="Drifting At Projections Obstructions" />
+            </a>
+        </div>
+        <div class="snow-load-case">
+            <a href="@Url.Action("Snowguards", "SnowLoads")">
+                <img class="snow-load-link" src="~/Content/Images/SnowLoads/Snowguards.png" alt="Snowguards" />
+            </a>
+        </div>
+    </div>
+</div>
 
 
