--- a/KPK_CalcSite/Views/SnowLoads/_BuildingSite.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/_BuildingSite.cshtml
@@ -7,7 +7,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.BuildingData.BuildingSite.CurrentZone, "Zone")
         @Html.EnumDropDownListFor(m => m.BuildingData.BuildingSite.CurrentZone,
-        new { @onchange = "checkIfAttitudeIsNeeded(this.value)"})
+        new { @onchange = "checkIfAttitudeIsNeeded()"})
     </div>
 
     <div class="form-group" id="attitiude">
@@ -59,7 +59,7 @@
     <div class="form-group" id="attitiude">
         @Html.LabelFor(m => m.BuildingData.SnowLoad.ReturnPeriod, "Return period")
         @Html.TextBoxFor(m => m.BuildingData.SnowLoad.ReturnPeriod,
-       new { @class= "form-control", @placeholder= "Enter return period in years", Value = "50", @type="number", @min="5" })
+       new { @class= "form-control", @placeholder= "Enter return period in years", Value = "50", @onchange = "checkIfAttitudeIsNeeded()", @type ="number", @min="5" })
     </div>
 
 <div class="collapse">
