--- a/KPK_CalcSite/Views/SnowLoads/ExceptionalRoofAbuttingToTallerConstructionResult.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/ExceptionalRoofAbuttingToTallerConstructionResult.cshtml
@@ -30,8 +30,8 @@
 
             <h3>Snow loads:</h3>
             <ul>
-                <li class="score"><strong>Snow load on roof (near the top):</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.SnowLoad1, 3) kN/m<sup>2</sup></li>
-                <li class="score"><strong>Snow load on roof (closer to the edge):</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.SnowLoad2, 3) kN/m<sup>2</sup></li>
+                <li class="score"><strong>Snow load on roof (near the top):</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.SnowLoadNearTheTop, 3) kN/m<sup>2</sup></li>
+                <li class="score"><strong>Snow load on roof (closer to the edge):</strong> @Math.Round(Model.ExceptionalRoofAbuttingToTallerConstruction.SnowLoadNearTheEdge, 3) kN/m<sup>2</sup></li>
             </ul>
 
                 <a href="@Url.Action("Calculator", "SnowLoads")">
