--- a/KPK_CalcSite/Views/SnowLoads/ExceptionalOverDoorOrLoadingBayResult.cshtml
+++ b/KPK_CalcSite/Views/SnowLoads/ExceptionalOverDoorOrLoadingBayResult.cshtml
@@ -23,7 +23,7 @@
             <h3>Snow loads:</h3>
             <ul>
                 <li><strong>Drift length:</strong> @Math.Round(Model.ExceptionalOverDoorOrLoadingBay.DriftLength, 3) m</li>
-                <li><strong>Shape coefficient:</strong> @Math.Round(Model.ExceptionalOverDoorOrLoadingBay.ShapeCoefficient1, 3)</li>
+                <li><strong>Shape coefficient:</strong> @Math.Round(Model.ExceptionalOverDoorOrLoadingBay.ShapeCoefficient, 3)</li>
                 <li class="score"><strong>Snow load:</strong> @Math.Round(Model.ExceptionalOverDoorOrLoadingBay.SnowLoad, 3) kN/m<sup>2</sup></li>
             </ul>
 
